@@ -1,3 +1,9 @@
+2005-10-18  Tor Lillqvist  <tml@novell.com>
+
+	* gconf/gconf-backend.c (invalid_chars[]): Do allow space in
+	configuration source addresses on Windows, as space is common in
+	user names, and thus home directories (i.e., profile folders).
+
 2005-10-09  Mark McLoughlin  <mark@skynet.ie>
 
 	Based on patch from Lorenzo Colitti <lorenzo@colitti.com>
